added about page

--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -54,6 +54,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+              <a class="nav-item nav-link" href="{{ url_for('about') }}">About Us</a>
             </div>
               <div class="dropdown" style="color: white;">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="" style="color: white;">Categories</a>
