fixed cart error, footer

--- a/ecommerceweb/templates/about.html
+++ b/ecommerceweb/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
+<div class="container" style="min-height: 100vh;">
     <div class="content-section mr-5 ml-5 mt-5 mb-5" width="35%">
         <div class="row mr-5 ml-5 mt-5 mb-5">
             <div class="col-8">
