--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -96,8 +96,8 @@
   </main>
   {% block content %}{% endblock %}
   <br><br><br><br>
-  <footer class="py-5 bg-dark font-small pt-4" style="height: 100%;">
-    <p class="m-0 text-center text-white">Copyright &copy; DesiOriginals 2020</p>
+  <footer style="height: 50px; position: relative; bottom: 0; left: 0; right: 0; line-height:30px; background-color: gainsboro;">
+    <p class="m-0 text-center text-muted">Copyright &copy; DesiOriginals 2020</p>
   </footer>
 
   
