--- a/ecommerceweb/static/main.css
+++ b/ecommerceweb/static/main.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bg-steel {
-  background-color:brown;
+  background-color:saddlebrown;
 }
 
 .site-header .navbar-nav .nav-link {
