added seller info

--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -40,6 +40,10 @@
         height: 100%;
         width: 100%;
       }
+      .bg-steel {
+        background-color:saddlebrown;
+      }
+
       </style>
 </head>
 <body>
