--- a/ecommerceweb/templates/home.html
+++ b/ecommerceweb/templates/home.html
@@ -41,7 +41,7 @@
 </div>
 <div class="container-fluid">
     <br><br><br>
-    <h2 class="title"><center>Deals of the Day</center></h2>
+    <h2 class="title"><center>Featured</center></h2>
     <div class="card-columns">
         <div class="card" style="width:100%">
             <a href="{{url_for('product', id=7)}}"><img class="card-img-top" src="{{ url_for('static', filename='ayurveda51.png') }}" alt="Card image" style="width:100%"></a>
@@ -63,7 +63,7 @@
             <a href="{{url_for('categorypage', catname='homedecor')}}"><img class="card-img-top" src="{{ url_for('static', filename='gallery25.jpg') }}" alt="Card image" style="width:100%"></a>
             <div class="card-body">
             <h4 class="card-title"><center>Home Decor</center></h4>
-            <p class="card-text"><center>Exclusive deals on home decor!</center></p>
+            <p class="card-text"><center>Spruce up your home with our exquisite collection of home decor!</center></p>
             <center><a href="{{url_for('categorypage', catname='homedecor')}}" class="btn btn-primary">See more</a></center>
             </div>
         </div>
