--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -70,7 +70,7 @@
                   <a href="{{ url_for('categorypage', catname='handicrafts')}}" class="dropdown-item">Handicrafts</a>
                   <a href="{{ url_for('categorypage', catname='homedecor')}}"class="dropdown-item">Home Decor</a>
                   <a href="{{ url_for('categorypage', catname='ayurvedicproducts')}}" class="dropdown-item">Ayurvedic Products</a>
-                  <a href="{{ url_for('categorypage', catname='khadiclothproducts')}}" class="dropdown-item">Khadi cloth products</a>
+                  <a href="{{ url_for('categorypage', catname='khadiclothproducts')}}" class="dropdown-item">Khadi Cloth Products</a>
                   <a href="{{ url_for('categorypage', catname='jewellery')}}" class="dropdown-item">Jewellery</a>
                 </div>
             </div>
