--- a/ecommerceweb/templates/search_results.html
+++ b/ecommerceweb/templates/search_results.html
@@ -7,7 +7,7 @@
     {% elif length==1 %}
     <h3>1 product found</h3>
     {% else %}
-    <h3>{{length}} product found</h3>
+    <h3>{{length}} products found</h3>
     {% endif %}
 </center>
 <br><br>
